bin_PROGRAMS = code-sample

common_source_files = \
	src/Cmd.cpp \
	src/Cmd.hpp \
	src/docEvent.hpp \
	src/Observer.hpp \
	src/Index.cpp \
	src/Index.hpp \
	src/Indexer.cpp \
	src/Indexer.hpp \
	src/Storage.cpp \
	src/Storage.hpp \
	src/stringutility.hpp

code_sample_SOURCES = \
	$(common_source_files) \
	src/main.cpp
